--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,19 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 
-    <style name="Theme.Taskify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorOnPrimary">@color/white</item>
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorOnSecondary">@color/black</item>
-        <item name="android:windowBackground">@color/white</item>
-        <item name="android:statusBarColor" tools:targetApi="l">@color/purple_700</item>
+<!--    <style name="Theme.Taskify" parent="Theme.MaterialComponents.DayNight.DarkActionBar">-->
+<!--        <item name="colorPrimary">@color/purple_500</item>-->
+<!--        <item name="colorPrimaryVariant">@color/purple_700</item>-->
+<!--        <item name="colorOnPrimary">@color/white</item>-->
+<!--        <item name="colorSecondary">@color/teal_200</item>-->
+<!--        <item name="colorOnSecondary">@color/black</item>-->
+<!--        <item name="android:windowBackground">@color/white</item>-->
+<!--        <item name="android:statusBarColor" tools:targetApi="l">@color/purple_700</item>-->
+<!--    </style>-->
+
+    <!-- Thème parent sans ActionBar -->
+    <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- ta personnalisation ici -->
     </style>
+
 
 </resources>
